--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Stylish Portfolio - Start Bootstrap Template</title>
+        <title>Nicolas Aguiluz</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/fantasy_fire_flame_show_magic_icon_193755.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -121,36 +121,36 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Ice Cream</div>
-                                    <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                                    <div class="h2">Message Board</div>
+                                    <p class="mb-0">A proof of concept message board where users can discuss topics and share pictures.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/message board.gif" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://naguiluz.github.io/brews-and-reviews-client/" target="_blank">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
-                                    <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                                    <div class="h2">Brews and Reviews</div>
+                                    <p class="mb-0">A site for users to store images, thoughts, and ratings of new beers and drinks they try. Optimized for mobile devices.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/brews and reviews.gif" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://naguiluz.github.io/tic-tac-toe-client/" target="_blank">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
-                                    <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                                    <div class="h2">Tic-Tac-Toe</div>
+                                    <p class="mb-0">A classic game of tic-tac-toe coded for skull building! Optimized for mobile devices.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/tictactoe.png" alt="..." />
                         </a>
                     </div>
                 </div>
