--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -25,7 +27,7 @@
                 <li class="sidebar-brand"><a href="#page-top">Top</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
-                <li class="sidebar-nav-item"><a href="#services">Services</a></li>
+                <li class="sidebar-nav-item"><a href="#services">Tech Proficiencies</a></li>
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
             </ul>
@@ -60,33 +62,30 @@
         <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0">Services</h3>
-                    <h2 class="mb-5">What We Offer</h2>
+                    <h3 class="text-secondary mb-0"></h3>
+                    <h2 class="mb-5">Tech Proficiencies</h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
-                        <h4><strong>Responsive</strong></h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-javascript-plain"></i></span>
+                        <h4><strong>JavaScript</strong></h4>
+                        <p class="text-faded mb-0"></p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                        <h4><strong>Redesigned</strong></h4>
-                        <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-react-original"></i></span>
+                        <h4><strong>React</strong></h4>
+                        <p class="text-faded mb-0"></p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                        <h4><strong>Favorited</strong></h4>
-                        <p class="text-faded mb-0">
-                            Millions of users
-                            <i class="fas fa-heart"></i>
-                            Start Bootstrap!
-                        </p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-python-plain"></i></span>
+                        <h4><strong>Python</strong></h4>
+                        <p class="text-faded mb-0"></p>
                     </div>
+                    
                     <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
-                        <h4><strong>Question</strong></h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-django-plain"></i></span>
+                        <h4><strong>Django</strong></h4>
+                        <p class="text-faded mb-0"></p>
                     </div>
                 </div>
             </div>
@@ -95,9 +94,6 @@
         <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5">
-                    Welcome to
-                    <em>your</em>
-                    next website!
                 </h2>
             </div>
         </section>
@@ -114,7 +110,12 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">RPGenerator</div>
-                                    <p class="mb-0">A site for tabletop gamers to create and store their ideas for characters and stories!</p>
+                                    <p class="mb-0">A site for tabletop gamers to create and store their ideas for characters and stories!(React/JavaScript, Python/Django/postgreSQL)</p>
+                                    <i class="devicon-react-plain" style="font-size:50px;"></i>
+                                    <i class="devicon-javascript-plain" style="font-size:50px;"></i>
+                                    <i class="devicon-python-plain" style="font-size:50px;"></i>
+                                    <i class="devicon-django-plain" style="font-size:50px;"></i>
+                                    <i class="devicon-postgresql-plain" style="font-size:50px;"></i>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/RPGenerator.png" alt="..." />
@@ -125,7 +126,10 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Message Board</div>
-                                    <p class="mb-0">A proof of concept message board where users can discuss topics and share pictures.</p>
+                                    <p class="mb-0">A proof of concept message board where users can discuss topics and share pictures.(React/JavaScript, MongoDB/Mongoose)</p>
+                                    <i class="devicon-react-plain" style="font-size:50px;"></i>
+                                    <i class="devicon-javascript-plain" style="font-size:50px;"></i>
+                                    <i class="devicon-mongodb-plain" style="font-size:50px;"></i>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/message board.gif" alt="..." />
@@ -136,7 +140,10 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Brews and Reviews</div>
-                                    <p class="mb-0">A site for users to store images, thoughts, and ratings of new beers and drinks they try. Optimized for mobile devices.</p>
+                                    <p class="mb-0">A site for users to store images, thoughts, and ratings of new beers and drinks they try. Optimized for mobile devices.(Express/JavaScript, Node.js)</p>
+                                    <i class="devicon-express-original" style="font-size:50px;"></i>
+                                    <i class="devicon-javascript-plain" style="font-size:50px;"></i>
+                                    <i class="devicon-nodejs-plain" style="font-size:50px;"></i>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/brews and reviews.gif" alt="..." />
@@ -147,7 +154,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Tic-Tac-Toe</div>
-                                    <p class="mb-0">A classic game of tic-tac-toe coded for skull building! Optimized for mobile devices.</p>
+                                    <p class="mb-0">A classic game of tic-tac-toe coded for skull building! Optimized for mobile devices.(JavaScript)</p><i class="devicon-javascript-plain" style="font-size:50px;"></i>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/tictactoe.png" alt="..." />
@@ -157,13 +164,13 @@
             </div>
         </section>
         <!-- Call to Action-->
-        <section class="content-section bg-primary text-white">
+        <!-- <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">The buttons below are impossible to resist...</h2>
                 <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
                 <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
             </div>
-        </section>
+        </section> -->
         <!-- Map-->
         <!-- <div class="map" id="contact">
             <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
@@ -175,13 +182,13 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/nicolas-aguiluz/"><i class="icon-social-linkedin"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/nicolas-aguiluz/" target="_blank"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/aguiluz_nicolas"><i class="icon-social-twitter"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/aguiluz_nicolas" target="_blank"><i class="icon-social-twitter"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="https://github.com/naguiluz"><i class="icon-social-github"></i></a>
+                        <a class="social-link rounded-circle text-white" href="https://github.com/naguiluz" target="_blank"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Nicolas Aguiluz 2021</p>
