--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0"></h3>
-                    <h2 class="mb-5">Tech Proficiencies</h2>
+                    <h2 class="mb-5">Tech Skills and Proficiencies</h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -85,6 +85,62 @@
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-django-plain"></i></span>
                         <h4><strong>Django</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-html5-plain"></i></span>
+                        <h4><strong>HTML</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-sass-plain"></i></span>
+                        <h4><strong>SCSS</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-css3-plain"></i></span>
+                        <h4><strong>CSS</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-bootstrap-plain"></i></span>
+                        <h4><strong>Bootstrap</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-jquery-plain"></i></span>
+                        <h4><strong>jQuery</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-nodejs-plain"></i></span>
+                        <h4><strong>Node.js</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-mongodb-plain"></i></span>
+                        <h4><strong>MongoDB/Mongoose</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-git-plain"></i></span>
+                        <h4><strong>git</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-github-plain"></i></span>
+                        <h4><strong>GitHub</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-postgresql-plain"></i></span>
+                        <h4><strong>PostgreSQL</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-express-original"></i>
+                        </span>
+                        <h4><strong>Express</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
                 </div>
