--- a/index.html
+++ b/index.html
@@ -288,9 +288,8 @@
             <small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a></small>
         </div> -->
         <!-- Footer-->
-        <footer class="footer text-center" id="contact">
+        <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
-                <p>Please feel free to reach out by email <u>nicolasaguiluz2@gmail.com</u> or connect on LinkedIn or Twitter!</p>
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/nicolas-aguiluz/" target="_blank"><i class="icon-social-linkedin"></i></a>
