--- a/index.html
+++ b/index.html
@@ -62,54 +62,147 @@
         </section>
         <!-- Services-->
 
-        <style>
-            /* /* .carousel-item {
-                height: 32rem;
-                background: #777;
-                position: relative;
-                color:white;
-            } */
-        
-            .container {
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                padding-bottom: 50px;
-            } */
-        </style>
         <section>
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="14" aria-label="Slide 15"></button>
             </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-javascript-plain"></i></span>
+                        <h4><strong>JavaScript</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-react-original"></i></span>
+                        <h4><strong>React</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-python-plain"></i></span>
+                        <h4><strong>Python</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-django-plain"></i></span>
+                        <h4><strong>Django</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-html5-plain"></i></span>
+                        <h4><strong>HTML</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-sass-plain"></i></span>
+                        <h4><strong>SCSS</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-css3-plain"></i></span>
+                        <h4><strong>CSS</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-bootstrap-plain"></i></span>
+                        <h4><strong>Bootstrap</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-jquery-plain"></i></span>
+                        <h4><strong>jQuery</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-nodejs-plain"></i></span>
+                        <h4><strong>Node.js</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-mongodb-plain"></i></span>
+                        <h4><strong>MongoDB/Mongoose</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-github-plain"></i></span>
+                        <h4><strong>GitHub</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-git-plain"></i></span>
+                        <h4><strong>git</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-postgresql-plain"></i></span>
+                        <h4><strong>PostgreSQL</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="col-lg-3 col-md-6">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-express-original"></i>
+                        </span>
+                        <h4><strong>Express</strong></h4>
+                        <p class="text-faded mb-0"></p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         </section>
 
         <section class="content-section bg-primary text-white text-center" id="services">
@@ -135,7 +228,6 @@
                         <h4><strong>Python</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-django-plain"></i></span>
                         <h4><strong>Django</strong></h4>
