adjusting hover colors need to make carousel mobile only

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <img class="avi" src="assets/img/avi.jpg" />
+                <img class="avi" src="assets/img/avi.jpg" alt="A smiling man in a cap and sunglasses sits on a tree with cherry blossoms blooming on the branches."/>
                 <h1 class="mb-1">Nicolas Aguiluz</h1>
                 <h3 class="mb-5"><em>Web Designer || Educator || Team Player</em></h3>
                 <!-- <a class="btn btn-primary btn-xl" href="#about">Find Out More</a> -->
@@ -48,9 +48,9 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>I am a full stack web developer with a background in teaching and curriculum development. I have curious mind, love
+                        <h2 class="light-bg">I am a full stack web developer with a background in teaching and curriculum development. I have curious mind, love
                         working on teams, and am always eager to learn.</h2>
-                        <p class="lead mb-5">
+                        <p class="lead mb-5 light-bg">
                             I received my BS in Marine Biology at the University of Oregon, but have decided to switch over to software engineering.
                             My main interests are web development, AR/MR technologies, and game development. I recently completed the Software
                             Engineering Immersive program at General Assembly, and am learning Unity and other AR programs in my free time.
@@ -319,8 +319,8 @@
         <section class="content-section" id="portfolio">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
-                    <h3 class="text-secondary mb-0">Portfolio</h3>
-                    <h2 class="mb-5">Recent Projects</h2>
+                    <h3 class=" mb-0 light-bg">Portfolio</h3>
+                    <h2 class="mb-5 light-bg">Recent Projects</h2>
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
@@ -396,7 +396,7 @@
             <small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a></small>
         </div> -->
         <!-- Footer-->
-        <footer class="footer text-center">
+        <footer class="footer text-center" id="contact">
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
