--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </nav>
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
-            <div class="container px-4 px-lg-5 text-center">
+            <div class="container px-4 px-lg-5 text-center heading-mobile">
                 <img class="avi" src="assets/img/avi.jpg" alt="A smiling man in a cap and sunglasses sits on a tree with cherry blossoms blooming on the branches."/>
                 <h1 class="mb-1">Nicolas Aguiluz</h1>
                 <h3 class="mb-5"><em>Web Designer || Educator || Team Player</em></h3>
@@ -67,7 +67,7 @@
         </section>
 
         <section class="content-section bg-primary text-white text-center" id="services">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide  mobile-hide" data-bs-ride="carousel">
                 <!-- <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -221,13 +221,9 @@
             </div>
             <div class="content-section-heading">
                 <h3 class="text-secondary mb-0"></h3>
-                <h2 class="mb-5">Tech Skills and Proficiencies</h2>
+                <h2 class="mb-0">Tech Skills and Proficiencies</h2>
             </div>
-            <!-- <div class="container px-4 px-lg-5">
-                <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0"></h3>
-                    <h2 class="mb-5">Tech Skills and Proficiencies</h2>
-                </div>
+            <div class="container px-4 px-lg-5 desktop-hide">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-javascript-plain"></i></span>
@@ -306,7 +302,7 @@
                         <p class="text-faded mb-0"></p>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </section>
         <!-- Callout-->
         <section class="callout">
@@ -339,6 +335,18 @@
                             <img class="img-fluid" src="assets/img/RPGenerator.png" alt="..." />
                         </a>
                     </div>
+                    <div class="caption-mobile">
+                        <div class="caption-content">
+                            <div class="h2">RPGenerator</div>
+                            <p class="mb-0">A site for tabletop gamers to create and store their ideas for characters and
+                                stories!(React/JavaScript, Python/Django/postgreSQL)</p>
+                            <i class="devicon-react-plain" style="font-size:50px;"></i>
+                            <i class="devicon-javascript-plain" style="font-size:50px;"></i>
+                            <i class="devicon-python-plain" style="font-size:50px;"></i>
+                            <i class="devicon-django-plain" style="font-size:50px;"></i>
+                            <i class="devicon-postgresql-plain" style="font-size:50px;"></i>
+                        </div>
+                    </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="https://team-taco-project.github.io/taco-message-board-client/" target="_blank">
                             <div class="caption">
@@ -352,6 +360,17 @@
                             </div>
                             <img class="img-fluid" src="assets/img/message board.gif" alt="..." />
                         </a>
+                    </div>
+                    
+                    <div class="caption-mobile">
+                        <div class="caption-content">
+                            <div class="h2">Message Board</div>
+                            <p class="mb-0">A proof of concept message board where users can discuss topics and share
+                                pictures.(React/JavaScript, MongoDB/Mongoose)</p>
+                            <i class="devicon-react-plain" style="font-size:50px;"></i>
+                            <i class="devicon-javascript-plain" style="font-size:50px;"></i>
+                            <i class="devicon-mongodb-plain" style="font-size:50px;"></i>
+                        </div>
                     </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="https://naguiluz.github.io/brews-and-reviews-client/" target="_blank">
@@ -367,6 +386,16 @@
                             <img class="img-fluid" src="assets/img/brews and reviews.gif" alt="..." />
                         </a>
                     </div>
+                    <div class="caption-mobile">
+                        <div class="caption-content">
+                            <div class="h2">Brews and Reviews</div>
+                            <p class="mb-0">A site for users to store images, thoughts, and ratings of new beers and drinks they try.
+                                Optimized for mobile devices.(Express/JavaScript, Node.js)</p>
+                            <i class="devicon-express-original" style="font-size:50px;"></i>
+                            <i class="devicon-javascript-plain" style="font-size:50px;"></i>
+                            <i class="devicon-nodejs-plain" style="font-size:50px;"></i>
+                        </div>
+                    </div>
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="https://naguiluz.github.io/tic-tac-toe-client/" target="_blank">
                             <div class="caption">
@@ -377,6 +406,13 @@
                             </div>
                             <img class="img-fluid" src="assets/img/tictactoe.png" alt="..." />
                         </a>
+                    </div>
+                    <div class="caption-mobile">
+                        <div class="caption-content">
+                            <div class="h2">Tic-Tac-Toe</div>
+                            <p class="mb-0">A classic game of tic-tac-toe coded for skull building! Optimized for mobile
+                                devices.(JavaScript)</p><i class="devicon-javascript-plain" style="font-size:50px;"></i>
+                        </div>
                     </div>
                 </div>
             </div>
