--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </header>
         <!-- About-->
         
-        <section class="content-section bg-light" id="about">
+        <section class="content-section-about bg-light" id="about">
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
@@ -224,78 +224,78 @@
                 <h2 class="mb-0">Tech Skills and Proficiencies</h2>
             </div>
             <div class="container px-4 px-lg-5 desktop-hide">
-                <div class="row gx-4 gx-lg-5">
+                <div class="tech-icon row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-javascript-plain"></i></span>
                         <h4><strong>JavaScript</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+                    <div class="tech-icon col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-react-original"></i></span>
                         <h4><strong>React</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+                    <div class="tech-icon col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-python-plain"></i></span>
                         <h4><strong>Python</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-django-plain"></i></span>
                         <h4><strong>Django</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-html5-plain"></i></span>
                         <h4><strong>HTML</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-sass-plain"></i></span>
                         <h4><strong>SCSS</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-css3-plain"></i></span>
                         <h4><strong>CSS</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-bootstrap-plain"></i></span>
                         <h4><strong>Bootstrap</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-jquery-plain"></i></span>
                         <h4><strong>jQuery</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-nodejs-plain"></i></span>
                         <h4><strong>Node.js</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-mongodb-plain"></i></span>
                         <h4><strong>MongoDB/Mongoose</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-git-plain"></i></span>
                         <h4><strong>git</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-github-plain"></i></span>
                         <h4><strong>GitHub</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-postgresql-plain"></i></span>
                         <h4><strong>PostgreSQL</strong></h4>
                         <p class="text-faded mb-0"></p>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="tech-icon col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="devicon-express-original"></i>
                         </span>
                         <h4><strong>Express</strong></h4>
