--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2 class="light-bg">I am a full stack web developer with a background in teaching and curriculum development. I have curious mind, love
+                        <h2 class="light-bg">I am a full stack web developer with a background in teaching and curriculum development. I have a curious mind, love
                         working on teams, and am always eager to learn.</h2>
                         <p class="lead mb-5 light-bg">
                             I received my BS in Marine Biology at the University of Oregon, but have decided to switch over to software engineering.
