--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Nicolas Aguiluz 2021</p>
+                <a href="assets/Resume 2021.pdf">Resume</a>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
