--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h2 class="light-bg">I am a full stack web developer with a background of nearly seven years in teaching and curriculum development. I have a curious mind, love
                         working on teams, and am always eager to learn.</h2>
                         <p class="lead mb-5 light-bg">
-                            I received my BS in Marine Biology at the University of Oregon in 2017 while working in several labs studying genetics, ecology, and learning technical skills and practices. I've chosen to devote my time to software development due to my experience both in labs and as a teacher. As an engineer I can continue to learn as I did in the laboratory, and flex my people skills and teamwork that I picked up as a teacher. Here you can find my <a href="assets/Resume (1).pdf" target="_blank">Resume</a> to clarify a bit more of my background.
+                            I received my BS in Marine Biology at the University of Oregon in 2017 while working in several labs studying genetics, ecology, and learning technical skills and practices. I've chosen to devote my time to software development due to my experience both in labs and as a teacher. As an engineer I can continue to learn as I did in the laboratory, and flex my people skills and teamwork that I picked up as a teacher. Here you can find my <a href="assets/resume 1 2023 (1).pdf" target="_blank">Resume</a> to clarify a bit more of my background.
                         <br>
                         <n/>
                             My main interests are web development, AR/MR technologies, and game development. I recently completed the Software
@@ -449,7 +449,7 @@
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Nicolas Aguiluz 2021</p>
-                <a id="resume" href="assets/Resume (1).pdf" target="_blank">Resume</a>
+                <a id="resume" href="assets/resume 1 2023 (1).pdf" target="_blank">Resume</a>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
